@@ -1,6 +1,8 @@
 xine-ui (0.99.6) unstable; urgency=low
   (write here, newest entry on top)
 
+  * Mark the toolbar window as such; should fix control panel visibility issues
+    in full-screen mode with some window managers. [bug SF 1750100]
   * New command/keybinding from Richard van Paasen:
     "PVRSetFrequency" changes frequency on ivtv cards (input_pvr).
   * Install a shared-mime-info entry for .tox files, contributed by
